[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 142.0
margin_top = 16.0
margin_right = 182.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.286275, 0.921569, 0.14902, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="MessageLabel" type="Label" parent="."]
margin_left = 109.508
margin_top = 138.96
margin_right = 380.508
margin_bottom = 287.96
custom_fonts/font = SubResource( 2 )
text = "Game
 Start!!"

[node name="StartButton" type="Button" parent="."]
margin_left = 129.121
margin_top = 355.105
margin_right = 320.121
margin_bottom = 434.105
custom_fonts/font = SubResource( 3 )
text = "Start!!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
